--- a/SportsOrganizer.PostgreSqlMigrations/SportsOrganizer.PostgreSqlMigrations.csproj
+++ b/SportsOrganizer.PostgreSqlMigrations/SportsOrganizer.PostgreSqlMigrations.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -16,6 +16,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SportsOrganizer.Data\SportsOrganizer.Data.csproj" />
   </ItemGroup>
 
 </Project>
