Add files to get to the old version of app.

--- a/SportsOrganizer.Server/appsettings.json
+++ b/SportsOrganizer.Server/appsettings.json
@@ -5,5 +5,27 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "LiteDb": {
+    "DatabaseName": "SportsOrganizerKeyDB.db"
+  },
+  "DefaultSettings": {
+    "Language": "en",
+    "Theme": "default"
+  },
+  "Localization": {
+    "Languages": {
+      "en": "English",
+      "hr": "Hrvatski",
+      "fr": "Français",
+      "de": "Deutsch",
+      "hu": "Magyar",
+      "it": "Italiano",
+      "sr": "Srpski",
+      "sl": "Slovenščina",
+      "es": "Español"
+    }
+  },
+  "ExceptionPage": "/Error",
+  "FallbackPage": "/_Host"
 }
