--- a/SportsOrganizer.Server/SportsOrganizer.Server.csproj
+++ b/SportsOrganizer.Server/SportsOrganizer.Server.csproj
@@ -7,11 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Toast" Version="4.1.0" />
+    <PackageReference Include="Blazorise.Bootstrap5" Version="1.2.2" />
+    <PackageReference Include="Blazorise.Components" Version="1.2.2" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.2.2" />
+    <PackageReference Include="LiteDB" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +25,11 @@
     <ProjectReference Include="..\SportsOrganizer.MySqlMigrations\SportsOrganizer.MySqlMigrations.csproj" />
     <ProjectReference Include="..\SportsOrganizer.PostgreSqlMigrations\SportsOrganizer.PostgreSqlMigrations.csproj" />
     <ProjectReference Include="..\SportsOrganizer.SqlServerMigrations\SportsOrganizer.SqlServerMigrations.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+    <Folder Include="Resources\Components\Setup\BasicInfoSetupComponent\" />
   </ItemGroup>
 
 </Project>
