--- a/SportsOrganizer.Server/SportsOrganizer.Server.csproj
+++ b/SportsOrganizer.Server/SportsOrganizer.Server.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Localization" Version="7.0.5" />
+    <PackageReference Include="Radzen.Blazor" Version="4.9.1" />
   </ItemGroup>
 
   <ItemGroup>
