--- a/SportsOrganizer.Server/SportsOrganizer.Server.csproj
+++ b/SportsOrganizer.Server/SportsOrganizer.Server.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Modal" Version="7.1.0" />
     <PackageReference Include="Blazored.Toast" Version="4.1.0" />
     <PackageReference Include="Blazorise.Bootstrap5" Version="1.2.2" />
     <PackageReference Include="Blazorise.Components" Version="1.2.2" />
@@ -31,6 +32,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Components\AdminComponents\" />
+    <Folder Include="Components\UserComponents\" />
+    <Folder Include="Resources\Components\AdminComponents\" />
+    <Folder Include="Resources\Components\UserComponents\" />
+    <Folder Include="Resources\Pages\Index\" />
+    <Folder Include="Resources\Pages\Setup\" />
     <Folder Include="wwwroot\upload\image\" />
   </ItemGroup>
 
