--- a/SportsOrganizer.PostgreSqlMigrations/SportsOrganizer.PostgreSqlMigrations.csproj
+++ b/SportsOrganizer.PostgreSqlMigrations/SportsOrganizer.PostgreSqlMigrations.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\SportsOrganizer.Data\SportsOrganizer.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
