--- a/SportsOrganizer.SqlServerMigrations/SportsOrganizer.SqlServerMigrations.csproj
+++ b/SportsOrganizer.SqlServerMigrations/SportsOrganizer.SqlServerMigrations.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\SportsOrganizer.Data\SportsOrganizer.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
