--- a/SportsOrganizer.Server/SportsOrganizer.Server.csproj
+++ b/SportsOrganizer.Server/SportsOrganizer.Server.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Blazored.Toast" Version="4.1.0" />
     <PackageReference Include="Blazorise.Bootstrap5" Version="1.2.2" />
     <PackageReference Include="Blazorise.Components" Version="1.2.2" />
+    <PackageReference Include="Blazorise.DataGrid" Version="1.2.2" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.2.2" />
     <PackageReference Include="Blazorise.SpinKit" Version="1.2.2" />
     <PackageReference Include="LiteDB" Version="5.0.16" />
@@ -28,7 +29,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Localization" Version="7.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Radzen.Blazor" Version="4.9.2" />
+    <PackageReference Include="Radzen.Blazor" Version="4.10.0" />
   </ItemGroup>
 
   <ItemGroup>
