Update access modifiers.

--- a/SportsOrganizer.Server/SportsOrganizer.Server.csproj
+++ b/SportsOrganizer.Server/SportsOrganizer.Server.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Components\AdminComponents\" />
     <Folder Include="wwwroot\upload\image\" />
   </ItemGroup>
 
