--- a/SportsOrganizer.Server/SportsOrganizer.Server.csproj
+++ b/SportsOrganizer.Server/SportsOrganizer.Server.csproj
@@ -30,6 +30,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Localization" Version="7.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="QuestPDF" Version="2022.12.5" />
     <PackageReference Include="Radzen.Blazor" Version="4.10.1" />
   </ItemGroup>
 
